# facelift

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  TODO.md  format_sources.sh  qmlcppapi.py  setup_cmake.sh  setup_gtest.sh  uncrustify.cfg  variables.cmake.in
cmake/: CMakeLists.txt  FaceLiftConfig.cmake  QMLCppAPIConfig.cmake  faceliftConfig-functions.cmake  faceliftMacros.cmake  faceliftUnityConfig.cmake.in  helpers.cmake
cmake/facelift/: unity_generator.py
codegen/: CMakeLists.txt  facelift-codegen.py  faceliftConfig-codegen.cmake.in
codegen/facelift/: docgen.py  facelift-codegen.py  facelift-log.yaml
codegen/facelift/templates/: DummyModule.template.h  DummyService.template.h  Enum.template.cpp  Enum.template.h  IPC.template.h  IPCAdapter.template.cpp  IPCAdapter.template.h  IPCCommon.template.h  IPCDBus.template.h  IPCDBusAdapter.template.cpp  IPCDBusAdapter.template.h  IPCDBusProxy.template.cpp  IPCDBusProxy.template.h  IPCDBusProxyAdapter.template.cpp  IPCDBusProxyAdapter.template.h  IPCDBusServiceAdapter.template.cpp  IPCDBusServiceAdapter.template.h  IPCLocalProxyAdapter.template.cpp  IPCLocalProxyAdapter.template.h  IPCLocalServiceAdapter.template.cpp  IPCLocalServiceAdapter.template.h  IPCProxy.template.cpp  (+36 more)
doc/: CMakeLists.txt  IPC classes.plantuml  QML-implementation.plantuml  classes.plantuml  doxygen.cfg.in  monolithic.dot  no-monolithic.dot  overview.plantuml  page-annotations.h  page-cmakefunctions.h  page-cmakeoptions.h  page-cpp-implementation.h  page-example.h  page-examples.h  page-examples.h_  page-faq.h  page-features.h  page-generated.h  page-implementation.h  page-ipc.h  page-monolithic.h  page-properties.h  page-reference.h
examples/: CMakeLists.txt  launch-example.bat.in  launch-example.sh
examples/AddressBook/: AddressBookModelPlugin.cpp  AddressBookModelPlugin.h  AddressBookPlugin.cpp  AddressBookPlugin.h  CMakeLists.txt
examples/Advanced/: AdvancedPlugin.cpp  AdvancedPlugin.h  CMakeLists.txt
examples/Basic/: CMakeLists.txt  MyPackagePlugin.cpp  MyPackagePlugin.h
examples/IPC/: CMakeLists.txt  IPCExample.cpp
examples/InterfaceInInterface/: CMakeLists.txt  MyPlugin.cpp  MyPlugin.h
examples/Mediaplayer/: CMakeLists.txt  MediaPlayerPlugin.cpp  MediaPlayerPlugin.h
examples/ModuleImport/: CMakeLists.txt  ModuleImportPlugin.cpp  ModuleImportPlugin.h
examples/MonolithicBuild/: CMakeLists.txt  MySource1.cpp  MySource2.cpp
examples/MyPackage/: CMakeLists.txt  IPCServerRegistration.cpp  MyPackagePlugin.cpp  MyPackagePlugin.h
examples/Tuner/: CMakeLists.txt  TunerModelPlugin.cpp  TunerModelPlugin.h
examples/test/: CMakeLists.txt
lib/: CMakeLists.txt  utils.h
lib/common/: CMakeLists.txt  JSON.h  utils.h  widgets.h
lib/dummy/: CMakeLists.txt  ControlWidgets.h  DummyModel.cpp  DummyModel.h  DummyModelCommon.h  ServiceMonitor.cpp  ServiceMonitor.h  dummymodelpanel.ui  servicemonitormanagerwindow.ui  servicemonitorpanel.ui
lib/ipc/: CMakeLists.txt  ipc.cpp  ipc.h
lib/model/: CMakeLists.txt  DummyModel.cpp  DummyModel.h  Model.cpp  Model.h  QMLFrontend.h  QMLModel.cpp  QMLModel.h  ServiceMonitor.h  qmlfrontend.h
lib/property/: CMakeLists.txt  Property.h
lib/qmlmodel/: CMakeLists.txt  QMLModel.h
src/desktop-dev-tools/: CMakeLists.txt  ControlWidgets.h  DummyModel.cpp  DummyModel.h  ServiceMonitor.cpp  ServiceMonitor.h  ServiceMonitorQMLComponent.h  dummymodelpanel.ui  servicemonitormanagerwindow.ui  servicemonitorpanel.ui
src/ipc/: CMakeLists.txt  LICENSE  facelift-ipc.cpp  facelift-ipc.h  ipc.cpp  ipc.h
src/plugin/: CMakeLists.txt  FaceliftPlugin.cpp  FaceliftPlugin.h
test/: CMakeLists.txt  test1.cpp  test1.h
test/interface/: test.qdl  test.qface
test/ipc/: CMakeLists.txt  test_ipc.cpp
test/plugin/: CMakeLists.txt
test/property/: CMakeLists.txt  TestProperty.cpp  TestProperty.h
test/ui/: TestUI.qml
tests/: CMakeLists.txt  test-driver.sh.in
tests/asyncfunctions/: CMakeLists.txt  asyncfunctions-server.qml  check_asyncfunctions.js  common_asyncfunctions.js  tst_asyncfunctions_inprocess.qml  tst_asyncfunctions_ipc.qml  tst_asyncfunctions_local.qml
tests/asynctests/: CMakeLists.txt  asynctests-server.qml  combined_asynctests.js  tst_asynctests_inprocess.qml  tst_asynctests_ipc.qml  tst_asynctests_local.qml
tests/benchmarking/: BenchmarkingHelper.js  BenchmarkingImplementation.h  BenchmarkingPlugin.cpp  BenchmarkingPlugin.h  CMakeLists.txt  tst_benchmarking_inprocess.qml  tst_benchmarking_ipc.qml  tst_benchmarking_local.qml
tests/clang_tidy/: read.me  test_clang_tidy.sh
tests/cmake/: CMakeLists.txt
tests/combined/: CMakeLists.txt  CombinedSignalSpys.qml  check.js  check_combined.js  combined-server-singleton.qml  combined-server.qml  tst_combined_inprocess.qml  tst_combined_inprocess_async.qml  tst_combined_inprocess_async_singleton.qml  tst_combined_inprocess_singleton.qml  tst_combined_ipc.qml  tst_combined_ipc_async.qml  tst_combined_ipc_async_singleton.qml  tst_combined_ipc_singleton.qml  tst_combined_local.qml  tst_combined_local_singleton.qml
tests/coverage/: read.me  test_gcovr.sh
tests/coverage_lcov/: read.me  test_lcov.sh
tests/coverage_llvm-cov/: read.me  test_llvm-cov.sh
tests/manual/: CMakeLists.txt  facelift-test.h  test1.cpp  test1.h
tests/models/: CMakeLists.txt  check_models.js  models-server.qml  tst_models_inprocess.qml  tst_models_ipc.qml  tst_models_local.qml
tests/objectregistry/: CMakeLists.txt  client.cpp  client.h  server.cpp  server.h
tests/propertyBinding/: CMakeLists.txt  tst_propertyBinding_local.qml  tst_propertyBindingqml_local.qml
tests/propertyconsistency/: CMakeLists.txt  client.cpp  client.h  server.cpp  server.h
tests/readyflag/: CMakeLists.txt  tst_readyflag_local.qml
tests/sanitizers/: read.me  test_sanitizers.sh
tests/static/: read.me  test_pvs.sh
tests/unittest/: CMakeLists.txt  FaceliftObserverTest.cpp  FaceliftUtilsTest.cpp
tests/userData/: CMakeLists.txt  tst_userData.qml
tools/: CMakeLists.txt  build-tools.sh
tools/build_test/: CMakeLists.txt
(+374 files in other folders)
