project(facelift)

cmake_minimum_required(VERSION 3.1)

include(GNUInstallDirs)    # for standard installation locations

set(INSTALLATION_PATH ${CMAKE_INSTALL_BINDIR}/host-tools)

install(DIRECTORY facelift DESTINATION ${INSTALLATION_PATH}  USE_SOURCE_PERMISSIONS)

install(FILES facelift-codegen.py DESTINATION ${INSTALLATION_PATH}
    PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ
)

file(RELATIVE_PATH CODEGEN_RELATIVE_PATH /${CMAKE_CONFIG_INSTALLATION_PATH} /${INSTALLATION_PATH} )

configure_file(faceliftConfig-codegen.cmake.in ${CMAKE_CURRENT_BINARY_DIR}/faceliftConfig-codegen.cmake @ONLY)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/faceliftConfig-codegen.cmake DESTINATION ${CMAKE_CONFIG_INSTALLATION_PATH})

set_property(GLOBAL PROPERTY FACELIFT_CODEGEN_LOCATION ${CMAKE_CURRENT_LIST_DIR})
